# genetic_algorithm

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  mpi.cpp  openmp.cpp  sequential.cpp
